# Fine-Tune-Pipeline

./: .gitignore  CHAT_MARKERS.md  DOCS_SUMMARY.md  Dockerfile  MLFLOW_INTEGRATION_SUMMARY.md  README.md  SUPPORTED_METRICS.md  config.toml  docs_server.py  example.config.toml  main.py  mkdocs.yml  mlflow_test.py  pyproject.toml
.github/workflows/: ci.yml  ci_gemma.yml  docs.yml  pipeline.yml
app/: MLFLOW_INTEGRATION_GUIDE.md  MLFLOW_INTEGRATION_GUIDE_UPDATED.md  config_manager.py  docs_server.py  evaluation_test.py  evaluator.py  finetune_pipeline.py  finetuner.py  inferencer.py  mlflow_callback.py  mlflow_integration_example.py  mlflow_reporter.py  pipeline_invoker.py  utils.py  version.py
config-templates/: qwen2.5.toml
docs/: api-reference.md  contributing.md  index.md  troubleshooting.md
docs/components/: evaluator.md  fine-tuner.md  inferencer.md  pipeline-orchestrator.md
docs/configuration/: evaluator.md  fine-tuner.md  inferencer.md  overview.md
docs/getting-started/: choreo-setup.md  environment-setup.md  installation.md  quick-start.md
docs/tutorials/: advanced-configuration.md  basic-fine-tuning.md  ci-cd-integration.md
