[project]
name = "fine-tune-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.1",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "ragas>=0.2.15",
    "toml>=0.10.2",
    "transformers>=4.52.4",
    "trl>=0.19.0",
    "wandb>=0.20.1",
]
