[project]
name = "fine-tune-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "ragas>=0.2.15",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "toml>=0.10.2",
    "transformers>=4.52.4",
    "trl>=0.19.0",
    "unsloth>=2025.6.8",
    "wandb>=0.20.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]
